--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: aqua;
-  margin-top: 220px;
+  margin-top: 120px;
 }
 body .container {
   display: flex;
@@ -25,7 +25,13 @@ body .container h1 {
   font-family: "Courier New", Courier, monospace;
   font-weight: 600;
   margin-left: 3vh;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
   cursor: default;
+}
+body .container .row {
+  display: flex;
 }
 body .container .row input {
   width: 200px;
@@ -36,6 +42,9 @@ body .container .row input {
   outline: none;
   font-family: "Courier New", Courier, monospace;
   font-weight: 600;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 body .container .row button {
   width: 70px;
@@ -46,14 +55,18 @@ body .container .row button {
   font-family: "Courier New", Courier, monospace;
   font-size: 16px;
   font-weight: 600;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  outline: none;
   cursor: pointer;
 }
 body .container ul li {
   font-family: "Courier New", Courier, monospace;
   list-style: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  user-select: none;
   padding: 12px 8px 12px 40px;
   position: relative;
   cursor: pointer;
@@ -88,4 +101,4 @@ body .container ul span {
 body .container ul span:hover {
   background-color: rgb(206, 206, 206);
   border-radius: 50%;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
