--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,7 +9,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: aqua;
-  margin-top: 220px;
+  margin-top: 120px;
   .container {
     display: flex;
     flex-direction: column;
@@ -23,9 +23,11 @@ body {
       font-family: "Courier New", Courier, monospace;
       font-weight: 600;
       margin-left: 3vh;
+      user-select: none;
       cursor: default;
     }
     .row {
+      display: flex;
       input {
         width: 200px;
         height: 30px;
@@ -35,6 +37,7 @@ body {
         outline: none;
         font-family: "Courier New", Courier, monospace;
         font-weight: 600;
+        user-select: none;
       }
       button {
         width: 70px;
@@ -45,6 +48,8 @@ body {
         font-family: "Courier New", Courier, monospace;
         font-size: 16px;
         font-weight: 600;
+        user-select: none;
+        outline: none;
         cursor: pointer;
       }
     }
